--- a/ExchangeRateCalculatorWebApi/Web.config
+++ b/ExchangeRateCalculatorWebApi/Web.config
@@ -69,7 +69,7 @@
     </DbProviderFactories>
   </system.data>
   <connectionStrings>
-    <add name="MyDB" connectionString="Data Source=|DataDirectory|LogsDB.db;Version=3;" providerName="System.Data.SQLite.EF6" />
+    <add name="MyDB" connectionString="Data Source=|DataDirectory|\LogsDB.db;Version=3;" providerName="System.Data.SQLite.EF6" />
     
   </connectionStrings>
 </configuration>
