--- a/ExchangeRateCalculatorWebApi/ExchangeRateCalculatorWebApi.csproj
+++ b/ExchangeRateCalculatorWebApi/ExchangeRateCalculatorWebApi.csproj
@@ -138,6 +138,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\ExchangeRateCalculatorWebApi20191017073631 - Web Deploy.pubxml" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
