--- a/ExchangeRateCalculatorWebApi/ExchangeRateCalculatorWebApi.csproj
+++ b/ExchangeRateCalculatorWebApi/ExchangeRateCalculatorWebApi.csproj
@@ -134,9 +134,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\LogsDB.db">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\ExchangeRateCalculatorWebApi20191017073631 - Web Deploy.pubxml" />
     <None Include="Properties\Settings.settings">
@@ -150,7 +147,9 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
